--- a/WKT3/index.html
+++ b/WKT3/index.html
@@ -3,6 +3,7 @@
   <head>
     <h1>Pizza</h1>
     <strong>Lekkere pizza</strong>
+    <strong>pizza</strong>
     <style>
       h1 {
         color: green;
